fixed Skeleton on mobile

--- a/src/components/SneakersList/style.scss
+++ b/src/components/SneakersList/style.scss
@@ -2,7 +2,7 @@
   padding-bottom: 40px;
 }
 .card {
-  width: 100%;
+  display: block;
   max-width: 250px;
   background: #ffffff;
   border: 1px solid #f3f3f3;
